--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "koa-router": "^7.4.0",
     "koa-static": "^5.0.0",
     "koa-views": "^6.2.0",
-    "pug": "^2.0.3"
+    "mysql2": "^2.3.3",
+    "pug": "^2.0.3",
+    "sequelize": "^6.21.4"
   },
   "devDependencies": {
     "eslint": "^8.23.0",
